--- a/public_html/css/circa.css
+++ b/public_html/css/circa.css
@@ -29,7 +29,8 @@ body{
 /* ------------------------- */
 
 .controlPanel{
-	position: absolute;
+	position: fixed;
+	top: 0;
 	right: 0;
 	background-color: rgba(0,0,0,0.8);
 	color: #CCC;
