Made Init X-Roads more robust

--- a/public_html/css/circa.css
+++ b/public_html/css/circa.css
@@ -1,7 +1,7 @@
 
 html, 
 body {
-	font-family: arial, sans-serif;
+    font-family: sans-serif;
 	padding: 0;
 	margin: 0;
 	font-size: 12px;
@@ -85,8 +85,13 @@ a:hover {
 	cursor: pointer;
 }
 
-button:hover,
-input[type=button]:hover {
+button,
+input[type=button] {
+    border: 0;
+}
+
+button:not(:disabled):hover,
+input[type=button]:not(:disabled):hover {
 	background-color: lightblue;
 	cursor: pointer;
 }
